--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             margin: 0;
             padding: 0;
             background: #2c3e50;
-            background-image: url("../2025/pic/bottom1.jpg");
+            background-image: url("../pic/bottom1.jpg");
             background-size: cover;
             position: relative;
             font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
