--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             margin: 0;
             padding: 0;
             background: #2c3e50;
-            background-image: url("qdpebooks/Ebooks/blob/main/pic/bottom1.jpg");
+            background-image: url("../qdpebooks/Ebooks/blob/main/pic/bottom1.jpg");
             background-size: cover;
             position: relative;
             font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -174,61 +174,61 @@
 <body>
     <!-- 懸浮LOGO在書本正上方，離上方10px -->
     <div class="logo-float">
-        <img src="qdpebooks/Ebooks/blob/main/pic/logotitle.svg" alt="Logo">
+        <img src="../qdpebooks/Ebooks/blob/main/pic/logotitle.svg" alt="Logo">
     </div>
     <div class="book-container">
         <div class="book-spine"></div>
         <div id="flipbook">
             <!-- 封面 -->
             <div class="hardcover">
-                <img src="qdpebooks/Ebooks/blob/main/pic/book (1).jpg" alt="書本封面">
+                <img src="../qdpebooks/Ebooks/blob/main/pic/book (1).jpg" alt="書本封面">
             </div>
             <!-- 內頁 -->
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (2).jpg" alt="第1頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (3).jpg" alt="第2頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (4).jpg" alt="第3頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (5).jpg" alt="第4頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (6).jpg" alt="第5頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (7).jpg" alt="第6頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (8).jpg" alt="第7頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (9).jpg" alt="第8頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (10).jpg" alt="第9頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (11).jpg" alt="第10頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (12).jpg" alt="第11頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (13).jpg" alt="第12頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (14).jpg" alt="第13頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (15).jpg" alt="第14頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (16).jpg" alt="第15頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (17).jpg" alt="第16頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (18).jpg" alt="第17頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (19).jpg" alt="第18頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (20).jpg" alt="第19頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (21).jpg" alt="第20頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (22).jpg" alt="第21頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (23).jpg" alt="第22頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (24).jpg" alt="第23頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (25).jpg" alt="第24頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (26).jpg" alt="第25頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (27).jpg" alt="第26頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (28).jpg" alt="第27頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (29).jpg" alt="第28頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (30).jpg" alt="第29頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (31).jpg" alt="第30頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (32).jpg" alt="第31頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (33).jpg" alt="第32頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (34).jpg" alt="第33頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (35).jpg" alt="第34頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (36).jpg" alt="第35頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (37).jpg" alt="第36頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (38).jpg" alt="第37頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (39).jpg" alt="第38頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (40).jpg" alt="第39頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (41).jpg" alt="第40頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (42).jpg" alt="第41頁"></div>
-            <div class="page"><img src="qdpebooks/Ebooks/blob/main/pic/book (43).jpg" alt="第42頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (2).jpg" alt="第1頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (3).jpg" alt="第2頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (4).jpg" alt="第3頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (5).jpg" alt="第4頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (6).jpg" alt="第5頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (7).jpg" alt="第6頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (8).jpg" alt="第7頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (9).jpg" alt="第8頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (10).jpg" alt="第9頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (11).jpg" alt="第10頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (12).jpg" alt="第11頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (13).jpg" alt="第12頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (14).jpg" alt="第13頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (15).jpg" alt="第14頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (16).jpg" alt="第15頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (17).jpg" alt="第16頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (18).jpg" alt="第17頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (19).jpg" alt="第18頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (20).jpg" alt="第19頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (21).jpg" alt="第20頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (22).jpg" alt="第21頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (23).jpg" alt="第22頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (24).jpg" alt="第23頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (25).jpg" alt="第24頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (26).jpg" alt="第25頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (27).jpg" alt="第26頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (28).jpg" alt="第27頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (29).jpg" alt="第28頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (30).jpg" alt="第29頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (31).jpg" alt="第30頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (32).jpg" alt="第31頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (33).jpg" alt="第32頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (34).jpg" alt="第33頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (35).jpg" alt="第34頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (36).jpg" alt="第35頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (37).jpg" alt="第36頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (38).jpg" alt="第37頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (39).jpg" alt="第38頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (40).jpg" alt="第39頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (41).jpg" alt="第40頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (42).jpg" alt="第41頁"></div>
+            <div class="page"><img src="../qdpebooks/Ebooks/blob/main/pic/book (43).jpg" alt="第42頁"></div>
             <!-- 封底 -->
             <div class="hardcover-back">
-                <img src="qdpebooks/Ebooks/blob/main/pic/book (44).jpg" alt="書本封底">
+                <img src="../qdpebooks/Ebooks/blob/main/pic/book (44).jpg" alt="書本封底">
             </div>
         </div>
     </div>
